--- a/Render.yaml
+++ b/Render.yaml
@@ -3,7 +3,9 @@ services:
     name: my-spring-boot-app
     env: java
     plan: free
-    buildCommand: mvn clean package
+    buildCommand: |
+      apt-get update && apt-get install -y maven &&
+      mvn clean package
     startCommand: java -jar target/my-spring-boot-app-0.0.1-SNAPSHOT.jar
     envVars:
       - key: SPRING_PROFILES_ACTIVE
