--- a/Render.yaml
+++ b/Render.yaml
@@ -1,11 +1,6 @@
 services:
   - type: web
     name: demo
-    env: docker
+    env: docker  # Use Docker environment
     plan: free
-    buildCommand: mvn clean package
-    startCommand: java -jar target/demo-0.0.1-SNAPSHOT.jar
-    envVars:
-      - key: SPRING_PROFILES_ACTIVE
-        value: prod
-    autoDeploy: true
+    autoDeploy: true  # Automatically deploy on changes
